added JS file and start of the html

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
         <meta name="author" content="">
 
         <style>
-
-
         </style>
 
         <script>
-            
         </script>
 </head>
     <body>
+        <h1>Hunny Do list</h1>
+        <h3>Mike Cann's Hunny Do List</h3>
+        <p>Here I am going to build a to do list using javascript. Wish me luck and here we go.</p>
 
 
-
-
+    <script type="text/javascript" src="hunnydo.js"></script>
     </body>
 </html>
