pastel styling and centering of text box

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">       
         <meta name="keywords" content="">
         <meta name="author" content="">
+        <link rel="stylesheet" href="style.css">
 
         <style>
         </style>
@@ -14,11 +15,16 @@
         </script>
 </head>
     <body>
-        <h1>Hunny Do list</h1>
-        <h3>Mike Cann's Hunny Do List</h3>
-        <p>Here I am going to build a to do list using javascript. Wish me luck and here we go.</p>
-
-
-    <script type="text/javascript" src="hunnydo.js"></script>
+        <div id="toDo">
+            <div id="title"><h1>Hunny Do list</h1>
+            <h3>Mike Cann's Hunny Do List</h3>
+            <p>Here I am going to build a to do list using javascript. Wish me luck and here we go.</p>
+            </div>
+            <div class="textbox">
+            <input type="text" id="entry" placeholder="Enter list here">
+            </div>
+    
+            <script type="text/javascript" src="hunnydo.js"></script>
+        </div>
     </body>
 </html>
