worrking addition and deletion of list items

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
             <div class="textbox">
                 <input type="text" placeholder="Enter list here" id="inputField">
-
-                <ul id="todos-list">
-                </ul>
+                <div id="listItems">
+                    <ul id="todos-list">
+                    </ul>
+                </div>
                 <div id="controls">
                     <input type="button" id="enterButt" value="Enter">
+                    <input type="button" id="clearButt" value="Clear">
                
                 </div>
                 <!--End of Button Div-->
