--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div id="title">    
                 <h1>Hunny Do list</h1>
             </div>
+            <p>HI this is a <a href="www.google.com"> paragraph</a></p>
             <!--End of title Div-->    
         
             <div class="textbox">
